--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: video_player
-description: Play video natively and easily
+description: Play video natively and easily.
 version: 1.0.5
 homepage: https://github.com/SunnatilloShavkatov/video_player.git
 
