--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,6 @@ group 'uz.shs.video_player'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.media3_version = '1.3.1'
     repositories {
         google()
         mavenCentral()
@@ -56,24 +55,30 @@ android {
     }
 
     dependencies {
+        /// media3
+        def media3_version = '1.3.1'
         implementation "androidx.media3:media3-ui:$media3_version"
         implementation "androidx.media3:media3-exoplayer:$media3_version"
         implementation "androidx.media3:media3-exoplayer-hls:$media3_version"
         implementation "androidx.media3:media3-datasource-cronet:$media3_version"
 
+        /// multidex
         def multidex_version = "2.0.1"
         implementation "androidx.multidex:multidex:$multidex_version"
-        implementation 'com.google.android.material:material:1.11.0'
+
+        /// retrofit
+        def retrofit_version = "2.11.0"
         implementation 'com.google.code.gson:gson:2.10.1'
-        implementation 'com.github.bumptech.glide:glide:4.15.1'
+        implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+        implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
-        // retrofit
-        implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-        implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
-        implementation 'androidx.appcompat:appcompat:1.6.1'
-
-        implementation 'org.checkerframework:checker-qual:3.37.0'
+        /// cronet
+        implementation 'org.checkerframework:checker-qual:3.42.0'
         implementation 'com.google.android.gms:play-services-cronet:18.0.1'
+
+        /// ui
+        implementation 'androidx.appcompat:appcompat:1.6.1'
+        implementation 'com.github.bumptech.glide:glide:4.15.1'
+        implementation 'com.google.android.material:material:1.11.0'
     }
 }
