--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="uz.shs.video_player">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -16,8 +15,7 @@
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden|smallestScreenSize|uiMode|layoutDirection"
             android:resizeableActivity="true"
             android:supportsPictureInPicture="true"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            tools:targetApi="n" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
 
         <service
             android:name=".services.MyDownloadService"
