--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -23,7 +23,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace 'uz.udevs.udevs_video_player_example'
+    namespace 'uz.shs.video_player_example'
     compileSdk 34
 
     compileOptions {
@@ -40,7 +40,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "uz.udevs.udevs_video_player_example"
+        applicationId "uz.shs.video_player_example"
         minSdkVersion 24
         // noinspection EditedTargetSdkVersion
         targetSdkVersion 34
