--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -32,7 +32,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_1_8
     }
 
     sourceSets {
@@ -42,7 +42,7 @@ android {
     defaultConfig {
         applicationId "uz.shs.video_player_example"
         minSdkVersion 24
-        // noinspection EditedTargetSdkVersion
+        // noinspection OldTargetApi,EditedTargetSdkVersion
         targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
