--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,10 +14,9 @@ dependencies:
     path: ../
 
 dev_dependencies:
-  flutter_lints: ^5.0.0
+  analysis_lints: ^1.0.1
   flutter_test:
     sdk: flutter
 
 flutter:
-
   uses-material-design: true
