--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ description: "Play video natively and easily."
 homepage: https://github.com/SunnatilloShavkatov/video_player.git
 
 environment:
-  sdk: '>=3.7.0 <4.0.0'
-  flutter: ">=3.27.0"
+  sdk: ">=3.8.0 <4.0.0"
+  flutter: ">=3.32.0"
 
 dependencies:
   flutter:
