--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -66,6 +66,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
+		<string>audio</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
