--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="Video Player"
         android:theme="@style/Theme.AppCompat"
+        android:enableOnBackInvokedCallback="true"
         android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
